--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@ layout: default
 <!-- About Section -->
  <section id="about" class="section">
     <h2 class="section-title">About Me</h2>
-    <p>Hi!</p>
+    <div class="about-content">
+        <p>Hi!  I'm Nate Byford, currently pursuing a Ph.D. in Statistical Sciences at Baylor University, with a concentration in Data Science. Over the past five years, I've leveraged advanced statistical methods and machine learning to transform complex data into actionable insights - completing numerous consulting projects, helping to author papers and conference presentations, and consistently delivering client satisfaction.</p>
+        <p>My passion lies at the intersection of statistical analysis, data-driven decision-making, and real-world impact. Whether it's designing Bayesian A/B tests, developing predictive analytics, or implementing cutting-edge AI/ML, I strive to make the world a safer, smarter place through data science.</p>
+    </div>
  </section>
 
 <!-- Skills Section -->
